--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "lucide": "^0.563.0",
+    "lucide-react": "^0.563.0",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
